--- a/c-practice-with-urls.ipynb
+++ b/c-practice-with-urls.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"unsplash.png\" width=\"60%\">"
+    "<img src=\"assets/unsplash.png\" width=\"60%\">"
    ]
   },
   {
